@@ -20,6 +20,7 @@
 - API Change: Removed Actor#setCenterPosition, added setPosition(x,y,align).
 - API Change: JsonReader, forward slash added to characters an unquoted strings cannot start with.
 - API Change: Stage#cancelTouchFocus(EventListener,Actor) changed to cancelTouchFocusExcept.
+- API Change: Json/JsonWriter.setQuoteLongValues() quotes Long, BigDecimal and BigInteger types to prevent truncation in languages like JavaScript and PHP.
 
 [1.3.1]
 - API change: Viewport refactoring. https://github.com/libgdx/libgdx/pull/2220
